closDevOrg/force-app/main/default/objects/LOS_Stage_Transition__mdt/LOS_Stage_Transition__mdt.object-meta.xml
<CustomObject>
    <description>Allowed directed lifecycle edges; optional application-type scope. Specific scope overrides global scope by transition code.</description>
    <label>LOS Stage Transition</label>
    <pluralLabel>LOS Stage Transition Records</pluralLabel>
</CustomObject>