closDevOrg/force-app/main/default/objects/LOS_Stage_Transition__mdt/fields/LOS_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>LOS_Application_Type__c</fullName>
    <description>Application Type. See docs/data-dictionary.md for usage.</description>
    <label>Application Type</label>
    <referenceTo>LOS_Application_Type__mdt</referenceTo>
    <relationshipLabel>LOS Stage Transition Application Type</relationshipLabel>
    <relationshipName>LOS_Stage_Transition_Application_Type</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>