closDevOrg/force-app/main/default/objects/LOS_Stage_Transition__mdt/fields/LOS_From_Stage__c.field-meta.xml
<CustomField>
    <fullName>LOS_From_Stage__c</fullName>
    <description>From Stage. See docs/data-dictionary.md for usage.</description>
    <label>From Stage</label>
    <referenceTo>LOS_Stage__mdt</referenceTo>
    <relationshipLabel>LOS Stage Transition From Stage</relationshipLabel>
    <relationshipName>LOS_Stage_Transition_From_Stage</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>