closDevOrg/force-app/main/default/objects/LOS_Stage_Transition__mdt/fields/LOS_Requires_Reason__c.field-meta.xml
<CustomField>
    <fullName>LOS_Requires_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Requires Reason. See docs/data-dictionary.md for usage.</description>
    <label>Requires Reason</label>
    <type>Checkbox</type>
</CustomField>