closDevOrg/force-app/main/default/objects/LOS_Stage_Transition__mdt/fields/LOS_To_Stage__c.field-meta.xml
<CustomField>
    <fullName>LOS_To_Stage__c</fullName>
    <description>To Stage. See docs/data-dictionary.md for usage.</description>
    <label>To Stage</label>
    <referenceTo>LOS_Stage__mdt</referenceTo>
    <relationshipLabel>LOS Stage Transition To Stage</relationshipLabel>
    <relationshipName>LOS_Stage_Transition_To_Stage</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>