closDevOrg/force-app/main/default/objects/LOS_Stage_Transition__mdt/fields/LOS_Transition_Type__c.field-meta.xml
<CustomField>
    <fullName>LOS_Transition_Type__c</fullName>
    <description>Initial vocabulary Forward, Rework, Approval. Stored as extensible configuration text.</description>
    <label>Transition Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>